Modified estilo.css index.html and main.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <title>Acme Photography</title>
     </head>
     <body>
+            <!-- arrow -->
+            <div id="arrow" class="arrow-fadeOut">
+              <div id="arrowBtn" class=""></div>
+            </div> 
         <main>
             <!-- landing area -->
             <div id="landing">
@@ -62,10 +66,6 @@
             <p>Email: <strong>contact@acmephotos.com</strong></p>
             <p>Phone: <strong>+541189642001</strong></p>
         </footer>
-        <script
-			  src="http://code.jquery.com/jquery-3.4.1.min.js"
-			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			  crossorigin="anonymous"></script>
-        <script src="jquery.js"></script>			  
+        <script src="main.js"></script>			  
     </body>
 </html>
